--- a/examples/index.html
+++ b/examples/index.html
@@ -4,117 +4,288 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OsoDreamer Console Demo</title>
+    <title>OsoDreamer Console - Ultimate Demo</title>
     <style>
+        :root {
+            --bg: #0f172a;
+            --text: #e2e8f0;
+            --panel: #1e293b;
+            --primary: #3b82f6;
+        }
+
         body {
-            font-family: sans-serif;
+            font-family: 'Segoe UI', system-ui, sans-serif;
             padding: 20px;
-            background: #222;
-            color: #fff;
+            background: var(--bg);
+            color: var(--text);
+            padding-bottom: 100px;
+        }
+
+        h1 {
+            color: var(--primary);
+            font-weight: 300;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            font-size: 14px;
+            text-transform: uppercase;
+            color: #94a3b8;
+            margin-top: 0;
+            border-bottom: 1px solid #334155;
+            padding-bottom: 5px;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .card {
+            background: var(--panel);
+            padding: 20px;
+            border-radius: 12px;
+            border: 1px solid #334155;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
         }
 
         button {
-            padding: 10px 20px;
+            padding: 8px 16px;
             cursor: pointer;
             border: none;
-            border-radius: 4px;
-            background: #3b82f6;
+            border-radius: 6px;
+            background: #334155;
             color: white;
-            font-weight: bold;
-            margin: 5px;
+            font-weight: 500;
+            font-size: 12px;
+            transition: 0.2s;
+            margin-bottom: 5px;
         }
 
         button:hover {
-            background: #2563eb;
+            background: #475569;
         }
 
-        button.err {
-            background: #ef4444;
+        button.action {
+            background: var(--primary);
+        }
+
+        button.action:hover {
+            filter: brightness(1.1);
         }
 
         button.warn {
             background: #f59e0b;
+            color: #fff;
         }
 
-        .section {
-            margin-bottom: 20px;
-            padding: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 8px;
+        button.err {
+            background: #ef4444;
+            color: #fff;
         }
 
-        h2 {
-            font-size: 16px;
-            color: #a1a1aa;
-            margin-top: 0;
+        .form-group {
+            margin-bottom: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+
+        label {
+            font-size: 11px;
+            color: #94a3b8;
+            font-weight: 600;
+        }
+
+        input[type="text"],
+        select,
+        input[type="color"] {
+            background: #0f172a;
+            border: 1px solid #475569;
+            color: #fff;
+            padding: 6px;
+            border-radius: 4px;
+            outline: none;
+        }
+
+        .row {
+            display: flex;
+            gap: 10px;
+        }
+
+        .row>* {
+            flex: 1;
         }
     </style>
 </head>
 
 <body>
-    <h1>OsoDreamer Console Demo</h1>
-    <p>Check the bottom LEFT for the "DEV TOOLS" button.</p>
+    <h1>OsoDreamer Console <span style="font-size:14px;color:#64748b">v1.0.0 Demo</span></h1>
+    <p style="margin-bottom:30px;color:#94a3b8">Interactive test drive for the embeddable console.</p>
 
-    <div class="section">
-        <h2>1. Console Logs</h2>
-        <button onclick="console.log('Hello Log', {foo:'bar', date: new Date()})">Log Info</button>
-        <button class="warn" onclick="console.warn('Warning! Something might be wrong.')">Log Warn</button>
-        <button class="err" onclick="console.error('Critical Error!', new Error('Stack trace here'))">Log Error</button>
+    <div class="grid">
+        <!-- CONFIGURATION -->
+        <div class="card">
+            <h2>Configuration</h2>
+            <div class="row">
+                <div class="form-group">
+                    <label>Position</label>
+                    <select id="cfg-pos" onchange="updateConfig()">
+                        <option value="bottom-right">Bottom Right</option>
+                        <option value="bottom-left" selected>Bottom Left</option>
+                        <option value="top-right">Top Right</option>
+                        <option value="top-left">Top Left</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>Trigger Style</label>
+                    <select id="cfg-style" onchange="updateConfig()">
+                        <option value="text">Text Button</option>
+                        <option value="dot">Dot Icon</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group"><label>Primary</label><input type="color" id="cfg-c-prim" value="#10b981"
+                        onchange="updateConfig()"></div>
+                <div class="form-group"><label>Trigger</label><input type="color" id="cfg-c-trig" value="#059669"
+                        onchange="updateConfig()"></div>
+                <div class="form-group"><label>Background</label><input type="color" id="cfg-c-bg" value="#161618"
+                        onchange="updateConfig()"></div>
+                <div class="form-group"><label>Text</label><input type="color" id="cfg-c-txt" value="#ecfdf5"
+                        onchange="updateConfig()"></div>
+            </div>
+            <div class="form-group">
+                <label>Trigger Text</label>
+                <input type="text" id="cfg-text" value="DEV TOOLS" oninput="updateConfig()">
+            </div>
+        </div>
+
+        <!-- LOG CAPTURE -->
+        <div class="card">
+            <h2>Console Logs</h2>
+            <div class="row">
+                <button class="action" onclick="console.log('Info Log', {user: 'demo'})">Log Info</button>
+                <button class="warn" onclick="console.warn('Warning: Low memory')">Log Warn</button>
+                <button class="err" onclick="console.error('Critical Failure', new Error('Oops!'))">Log Error</button>
+            </div>
+            <div style="margin-top:10px;display:flex;gap:5px;flex-wrap:wrap">
+                <button onclick="logComplex()">Complex Object</button>
+                <button onclick="logCircular()">Circular Ref</button>
+                <button onclick="logMany()">Flood (50 logs)</button>
+            </div>
+        </div>
+
+        <!-- NETWORK -->
+        <div class="card">
+            <h2>Network Traffic</h2>
+            <div class="row">
+                <button class="action" onclick="fetchJson()">Fetch JSON</button>
+                <button class="err" onclick="fetch404()">Fetch 404</button>
+                <button onclick="xhrReq()">XHR Request</button>
+            </div>
+        </div>
+
+        <!-- SYSTEM & STORAGE -->
+        <div class="card">
+            <h2>System & Storage</h2>
+            <div class="row">
+                <button onclick="fillStorage()">Fill LocalStorage</button>
+                <button class="err" onclick="throwGlobal()">Throw Uncaught</button>
+                <button class="err" onclick="throwPromise()">Reject Promise</button>
+            </div>
+        </div>
     </div>
 
-    <div class="section">
-        <h2>2. Network Requests (Fetch & XHR)</h2>
-        <button onclick="fetchJson()">Fetch JSON (Success)</button>
-        <button class="err" onclick="fetchError()">Fetch 404 (Error)</button>
-        <button onclick="runXHR()">XHR Request</button>
-    </div>
-
-    <div class="section">
-        <h2>3. System Errors</h2>
-        <button class="err" onclick="throwError()">Throw Uncaught Error</button>
-    </div>
-
-    <!-- Load the built library from ../dist -->
     <script src="../dist/osodreamer-console.umd.js"></script>
-
     <script>
-        // Initialize the console with THEME
-        const odc = new window.OsoDreamerConsole({
-            maxLogs: 50,
-            theme: {
-                primary: '#10b981', // Emerald Green
-                background: 'rgba(20, 20, 20, 0.95)',
-                text: '#ecfdf5'
-            },
-            trigger: {
-                text: 'DEV TOOLS',
-                color: '#059669',
-                position: 'bottom-left'
-            }
-        });
-        console.log('Console Initialized with Custom Theme!');
+        let odc;
+
+        function init() {
+            odc = new window.OsoDreamerConsole();
+            console.log("%c Demo Ready ", "background:#10b981;color:black;border-radius:4px");
+        }
+
+        function updateConfig() {
+            const pos = document.getElementById('cfg-pos').value;
+            const style = document.getElementById('cfg-style').value;
+            const text = document.getElementById('cfg-text').value;
+            const cPrim = document.getElementById('cfg-c-prim').value;
+            const cTrig = document.getElementById('cfg-c-trig').value;
+            const cBg = hexToRgba(document.getElementById('cfg-c-bg').value, 0.95);
+            const cTxt = document.getElementById('cfg-c-txt').value;
+
+            odc.renderer.setConfig({
+                theme: { primary: cPrim, background: cBg, text: cTxt },
+                trigger: {
+                    position: pos,
+                    color: cTrig,
+                    text: style === 'text' ? text : null
+                }
+            });
+        }
+
+        // --- Helpers ---
+        function hexToRgba(hex, alpha) {
+            const r = parseInt(hex.slice(1, 3), 16), g = parseInt(hex.slice(3, 5), 16), b = parseInt(hex.slice(5, 7), 16);
+            return `rgba(${r}, ${g}, ${b}, ${alpha})`;
+        }
+
+        // --- Tests ---
+        function logComplex() {
+            console.log('User Profile', {
+                id: 1, name: 'Tester',
+                roles: ['admin', 'editor'],
+                settings: { theme: 'dark', notifs: true },
+                avatar: null
+            });
+        }
+
+        function logCircular() {
+            const a = { name: 'A' };
+            const b = { name: 'B', link: a };
+            a.link = b;
+            console.log('Circular Check', a);
+        }
+
+        function logMany() {
+            for (let i = 0; i < 50; i++) console.log(`Log entry #${i} - ${Date.now()}`);
+        }
 
         function fetchJson() {
-            fetch('https://jsonplaceholder.typicode.com/todos/' + Math.floor(Math.random() * 100))
+            fetch('https://jsonplaceholder.typicode.com/users/1')
                 .then(r => r.json())
-                .then(d => console.log('Fetched Data:', d));
+                .then(d => console.log('API User:', d));
         }
 
-        function fetchError() {
-            fetch('https://httpstat.us/404')
-                .then(r => console.log('Fetched 404'))
-                .catch(e => console.error('Fetch Failed', e));
+        function fetch404() {
+            fetch('https://httpstat.us/404').catch(e => console.error('Expected Error:', e));
         }
 
-        function runXHR() {
+        function xhrReq() {
             const xhr = new XMLHttpRequest();
             xhr.open('GET', 'https://jsonplaceholder.typicode.com/posts/1');
             xhr.send();
         }
 
-        function throwError() {
-            throw new Error('This is a simulated uncaught error');
+        function fillStorage() {
+            localStorage.setItem('demo_user', 'OsoDreamer');
+            localStorage.setItem('demo_token', 'xyz-123-abc');
+            localStorage.setItem('demo_ts', Date.now());
+            console.log('Storage updated. Check "Storage" tab.');
         }
+
+        function throwGlobal() {
+            setTimeout(() => { throw new Error('Uncaught Global Error via setTimeout'); }, 100);
+        }
+
+        function throwPromise() {
+            Promise.reject('Unhandled Promise Rejection Reason');
+        }
+
+        // Start
+        init();
     </script>
 </body>
 
