--- a/examples/minimal-js.html
+++ b/examples/minimal-js.html
@@ -34,8 +34,8 @@
     <script src="../dist/osodreamer-console.umd.js"></script>
 
     <script>
-        // Init without config (Default Mode)
-        new window.OsoDreamerConsole();
+        // Init without config (Static Method)
+        window.OsoDreamerConsole.init();
     </script>
 </body>
 
